--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
         <div class="grid2">
             <div id="weathercontainer">
                     <p id="cityname">Bengaluru, Karnataka</p>
-                    <p id="date">Wednesday, 1:00 pm</p>
+                    <p id="date">Friday, 1:00 pm</p>
                     <p id="condition">Partly Cloudy</p>
-                    <p><span id="temperature">26</span><span id="unit"> C|F</span></p>
+                    <p><span id="temperature">26</span><span id="unit" onclick="fahreh()"> C | F</span></p>
             </div>
             <div id="searchcontainer">Enter city name
                 <br><input type="text" placeholder="city,state" onfocusout="checkClimate()" id="input" list="datalist">
                 <datalist id="datalist">
                     <option value="Banglore, Karnataka"></option>
-                    <option value="Chennai"></option>
+                    <option value="Chennai, Tamilnadu"></option>
                     <option value="Kochi, Kerala"></option>
+                    <option value="Hydrabad, Andrapradesh"></option>
+                    <option value="Kolkata, West Bengal"></option>
+                    <option value="Mumbai, Maharastra"></option>
                 </datalist>
             </div>
         </div>
