css and html modification

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <p id="cityname">Bengaluru, Karnataka</p>
                     <p id="date">Friday, 1:00 pm</p>
                     <p id="condition">Partly Cloudy</p>
-                    <p><span id="temperature">26</span><span id="unitc" onclick="cels()"> C</span><span> | </span><span id="unitf" onclick="fahreh()">F</span></p>
+                    <p><span id="temperature">26</span><sup><span id="unitc" onclick="cels()"> &degC</span><span> | </span><span id="unitf" onclick="fahreh()">&degF</span></sup></p>
             </div>
             <div id="searchcontainer">Enter city name
                 <br><input type="text" placeholder="city,state" onfocusout="checkClimate()" id="input" list="datalist">
