--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!--Weather app-->
+<!--Weather app
+Author : Syamgith-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +18,7 @@
             <div id="weathercontainer">
                     <p id="cityname">Bengaluru, Karnataka</p>
                     <p id="date">Friday, 1:00 pm</p>
-                    <p id="condition">Partly Cloudy</p>
+                    <p id="condition">Partly cloudy ⛅</p>
                     <p><span id="temperature">26</span><sup><span id="unitc" onclick="cels()"> &degC</span><span> | </span><span id="unitf" onclick="fahreh()">&degF</span></sup></p>
             </div>
             <div id="searchcontainer">Enter city name
